--- a/.github/workflows/backendBuild.yml
+++ b/.github/workflows/backendBuild.yml
@@ -42,7 +42,7 @@ jobs:
          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=bhavani-Zemoso_sonar-demo-test
  branchAnalysis:
-  if: github.event.pull_request.merged == false
+  if: github.event.pull_request.merged == true
   runs-on: ubuntu-latest
   defaults:
     run:
